--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,2 @@
-add_executable(test_hdlc test_hdlc.c)
-target_link_libraries(test_hdlc hdlc)
+add_executable(test_hdlc test_hdlc.c ../src/hdlc.c)
 add_test(test_hdlc test_hdlc)
